// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook comment  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d"
    >
      <div
        className="fb-video htz-e htz-f htz-g htz-h htz-i"
        data-allowfullscreen="true"
        data-autoplay="false"
        data-href="https://www.facebook.com/haaretz/posts/10155571966087520?comment_id=10155572023347520&comment_tracking=%7B%22tn%22%3A%22R0%22%7D"
        data-show-text="false"
        data-width="auto"
      />
    </div>
  </div>,
  "styles": ".htz-a{padding-bottom:NaN%}.htz-b{display:block}.htz-c{height:0}.htz-d{position:relative}.htz-e{height:100%}.htz-f{left:0}.htz-g{top:0}.htz-h{position:absolute}.htz-i{width:100%}",
}
`;

exports[`Facebook post  1`] = `
Object {
  "component": <div>
    <div
      className="fb-post htz-a"
      data-href="https://www.facebook.com/haaretz/posts/10155626716202520"
      data-width="auto"
    />
  </div>,
  "styles": ".htz-a *{width:100% !important}",
}
`;

exports[`Facebook video  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d"
    >
      <div
        className="fb-video htz-e htz-f htz-g htz-h htz-i"
        data-allowfullscreen="true"
        data-autoplay="false"
        data-href="https://www.facebook.com/haaretz/videos/10155591353462520/"
        data-show-text="false"
        data-width="auto"
      />
    </div>
  </div>,
  "styles": ".htz-a{padding-bottom:56.25%}.htz-b{display:block}.htz-c{height:0}.htz-d{position:relative}.htz-e{height:100%}.htz-f{left:0}.htz-g{top:0}.htz-h{position:absolute}.htz-i{width:100%}",
}
`;
